fix overflow bug

--- a/logviewer/logviewer-index.less
+++ b/logviewer/logviewer-index.less
@@ -49,6 +49,7 @@ a
         {
             flex: 1;
             margin-right: 30px;
+            overflow: hidden;
 
             .simplebar-track.simplebar-vertical
             {
